@@ -27,7 +27,6 @@ public:
 	const graph get_graph();
 	const int get_tick_count();
 	const message get_message();
-	void file_processor(string filename);
 	
 	// Setters
 	void set_graph(graph new_graph);
@@ -36,6 +35,7 @@ public:
 
 	// Methods
 	void tick();
+	void file_processor(string filename);
 	vector<string> string_parser(string tobeparsed);
 
 
